Improve print style, update lazy load

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         <article class="clearfix">
           <header>
             <figure class="hero">
-              <!--<img src="images/hero.png" alt="" height="700" width="1600">-->
-              <img alt="" src="//placehold.it/800x460/0099C7/ffffff&text=Small+Header" sizes="100vw" srcset="images/samples/header-small.jpg 640w, images/samples/header-medium.jpg 840w, images/samples/header-large.jpg 1200w">
+              <img alt="" src="images/samples/header-small.jpg 640w, images/samples/header-small.jpg" sizes="100vw" srcset="images/samples/header-small.jpg 640w, images/samples/header-medium.jpg 840w, images/samples/header-large.jpg 1200w" height='700' width='1600'>
             </figure>
             <div class="clear"></div>
           </header>        
             
           <content>
-            <h1>Extract from Alice's Adventures in Wonderland</h1>
+            <h1>An extract from Alice's Adventures in Wonderland</h1>
             <div class="article-meta clearfix">
               <img src="images/author-sean.jpg" class="article-meta-avatar">
               <span>
@@ -54,7 +53,8 @@
             <p>So she was considering in her own mind (as well as she could, for the hot day made her feel very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth the trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.</p>
 
             <figure class="full-width">
-                <img alt="" src="#" data-echo="images/samples/aiw-3.jpg">
+                <img alt="A white rabbit in a hat" src="//placehold.it/800x460/eeeeee/ffffff" data-echo="images/samples/aiw-3.jpg" height='460' width='800'>
+                <noscript><img alt="A white rabbit in a hat" src="images/samples/aiw-3.jpg" height='460' width='800'></noscript>
             </figure>
             <figcaption>An original illustration from Alice’s Adventures in Wonderland, drawn by John Tenniel.</figcaption>
 
@@ -105,6 +105,7 @@
 
         <footer>
           &copy; 2016 Lewis Carroll. All rights reserved.
+          <a href="https://seanockert.com/projects/blogpost-template" class="linkback"></a>
         </footer>    
       </main>
       
