--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>So she was considering in her own mind (as well as she could, for the hot day made her feel very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth the trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.</p>
 
             <figure class="full-width">
-                <img alt="A white rabbit in a hat" src="//placehold.it/800x460/eeeeee/ffffff" data-echo="images/samples/aiw-3.jpg" height='460' width='800'>
+                <img alt="A white rabbit in a hat" src="//placehold.it/800x460/eeeeee/ffffff" data-echo="images/samples/aiw-3.jpg" height='460' width='800' class="lazy">
                 <noscript><img alt="A white rabbit in a hat" src="images/samples/aiw-3.jpg" height='460' width='800'></noscript>
             </figure>
             <figcaption>An original illustration from Alice’s Adventures in Wonderland, drawn by John Tenniel.</figcaption>
