--- a/index.html
+++ b/index.html
@@ -73,9 +73,18 @@
             <div class="image-gallery full-width">
               <div id="swipe" class="swipe">
                 <div class="swipe-wrap">
-                  <div><img alt="" src="images/samples/aiw-1.jpg"></div>
-                  <div><img alt="" src="images/samples/aiw-2.jpg"></div>
-                  <div><img alt="" src="images/samples/aiw-3.jpg"></div>
+                  <div>
+                    <img alt="" src="images/samples/aiw-1.jpg">
+                    <figcaption>An original illustration from Alice’s Adventures in Wonderland, drawn by John Tenniel.</figcaption>
+                  </div>
+                  <div>
+                    <img alt="" src="images/samples/aiw-2.jpg">
+                    <figcaption>Caption of image 2</figcaption>
+                  </div>
+                  <div>
+                    <img alt="" src="images/samples/aiw-3.jpg">
+                    <figcaption>Caption of image 3</figcaption>
+                  </div>
                 </div>
                 <button id="prev"><svg xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 477.175 477.175" width="512" height="512"><g><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225 c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z" fill="#000000"/></svg></button>
                 <button id="next"><svg xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 477.175 477.175" width="512" height="512"><g><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5 c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z" fill="#000000"/></g></svg></button>
