Add Debucsser dev tool

--- a/index.html
+++ b/index.html
@@ -129,5 +129,6 @@
         document.documentElement.classList.add('is-offline'); 
       });
   </script>
+  <script src="src/debucsser.js"></script>
   </body>
 </html>
